--- a/index.html
+++ b/index.html
@@ -142,23 +142,26 @@
                              </p>"
                              data-reference-link="https://matera.atlassian.net/wiki/spaces/RTCS/pages/359007071/DV+-+F584623+-+Open+-Ajuste+base+CRI+CRA+e+Deb+ntures#8.3.1.-Incluir-o-campo-Defasagem-Index-no-Aditamento"
                              data-details="<p><b>Objetivo:</b> Acrescentar o campo 'Defasagem Index' na tela de aditamento (FRMADITAMENTO).</p><br><p><b>Alterações:</b>
-                                Criação de delta para insert na op_atributo_titulo com o novo item de defasagem index do papel.<br><br>
-                                <b>Nome: pOpApiAditamentoPapel</b><br><br>
-                                <b>Objetivo: </b> Esta package contém procedures para cadastro de aditamento de ativos do tipo CCB, CRA, CRI, DEB, CCIM.
-                                <br><br><b>Nome: pOpApiAditamentoPapel.insereEvento</b><br><br>
-                                <b>Objetivo: </b><br>
-                                Esta rotina é utilizada para incluir novos valores dos atributos aditáveis do ativo ou seja os novos valores do ativo que serão atualizados após efetivar o aditamento. <br><br>
-                                <b>Descrição do Processo: </b><br>
-                                A rotina de cadastro do atributo de aditamento (InsereAtributo) compreende 2 passos distintos:
-                                . validação dos parâmetros informados; em caso de inconsistências ou ausência de valores, o processo é interrompido e uma mensagem de erro retornada em 'posMsgErro'
-                                . Cadastra o novo valor do atributo de papel no envento de aditamento, para visualizar acessar a tela de aditamento do papel.
-                                Qualquer erro ocorrido no processo provocará a interrupção do mesmo e retorno com mensagem explicativa no parâmetro posMsgErro.
-                                <br><br>Para efetivação do aditamento deve executar a AlteraSituacaoEvento informando a situação 'A', ou seja, deverá chamar o processo pOpApiAditamentoPapel.alteraSituacaoEvento após atribuição.
-                                <p><br><b>Sequencia de teste possui os seguintes passos:</b></p>
-                                - cria a alteração de aditamento<br>
-                                - aprovação de evento na movimentação do dia<br>
-                                - altera a situação de aditamento - aberta<br>
-                                - deve ser refletido no cadastro do papel.
+                                Criação de delta para insert nas tabelas com o novo item de defasagem index do papel.<br><br>
+                                <b>op_atributo_titulo:</b><br>
+                                    . ID_ATRIBUTO => 'NumDiasDefasagemIndexador'<br>
+                                    . DESCRICAO => 'NUM DIAS DEFASAGEM INDEX'<br>
+                                    . TIPO => 'N'<br>
+                                    . IND_POSSUI_LISTA_DOMINIO => 'N'<br><br>
+                                    <b>op_rel_atributo_titulo: incluir associação do novo atributo com ativos do tipo DEB, CRI e CRA</b><br>
+                                    . COD_CLASSIF_TIT_INTERNA => 'DEB', 'CRI', 'CRA<br>
+                                    . ID_GRUPO_ATRIBUTO_TITULO => 'DadosBasicos'<br>
+                                    . ID_ATRIBUTO_TITULO =>  'NumDiasDefasagemIndexador'<br>
+                                    . ORDEM_ATRIBUTO =><br>
+                                            .. 24 para DEB<br>
+                                            .. 23 para CRA e CRI<br>
+                                    . IND_OBRIGATORIO => 'N'<br>
+                                    . IND_ATIVO  => 'S'<br>
+                                    . IND_VISIVEL_CADASTRO   => 'S'<br>
+                                    . IND_PERMITE_ADITAMENTO   => 'S'<br>
+                                    . IND_PERMITE_ALTERACAO  => 'S'<br><br>
+                                    <b>Alterar pOpPapelDD.ReplicaAtributos:</b><br>
+                                    . no final da procedure, incluir bloco de replicação do novo atributo 'NumDiasDefasagemIndexador' da mesma forma que acontece para os demais atributos<br><br>
                             </p>">
                             <div class="content">Alterações De Aditamento</div>
                         </div>
@@ -178,9 +181,15 @@
                                 <div class="flow-node node-diamond clickable" data-title="Script de Saúde da Base" 
                                     data-business-context="<p>Antes de migrar, precisamos entender a 'saúde' dos dados atuais, identificando inconsistências que poderiam causar problemas futuros.</p>" 
                                     data-reference-link="https://matera.atlassian.net/wiki/spaces/RTCS/pages/359007071/DV+-+F584623+-+Open+-Ajuste+base+CRI+CRA+e+Deb+ntures#8.1.-Sa%C3%BAde-da-base-antes-das-altera%C3%A7%C3%B5es"
-                                    data-details="<p>Leitura de dados disponibilizados pelo C6, cujo irão informar os respectivos campos para nossa comparação com o que tem cadastrado nas tabelas do open.<br><br>
-                                        <b>=> op_papel.cod_papel_sis_custodia<br>
-                                        => op_papel.DT_EMISSAO</b><br><br>
+                                    data-details="<p>Leitura de dados disponibilizados pelo C6 através da planilha 'LUZ', devemos ao importar, armazenar as informações em tabelas auxiliares, cujo utilizaremos nesta etapa de comparação com o que tem cadastrado nas tabelas do open e apontar as divergências no resultado.<br><br>
+                                        <b>Criação de novo processo de importação de arquivo, tomar como base a alteração do layout '707'. Deverá ser criado um novo procedimento que realiza a leitura do layout disponibilizado.</b><br><br>
+                                        => Planilha de exemplo com dados dos ativos:<br>
+                                        https://docs.google.com/spreadsheets/d/1TWhko2k6TRxWV5u1P2ZMenhKi1PFSxPy/edit?gid=1075738696#gid=1075738696<br><br>
+                                        => Planilha de exemplo com dados do fluxo:<br>
+                                        https://docs.google.com/spreadsheets/d/1cjptLBZaPYEbbQD7l8z729n16FmTHiNH/edit?gid=667184986#gid=667184986<br><br>
+                                        <b> Campos principais a serem comparados:<br>
+                                            => op_papel.cod_papel_sis_custodia<br>
+                                            => op_papel.DT_EMISSAO</b><br><br>
                                         Apresentar as divergências encontradas entre os dados do C6 e os dados do Open, para que a equipe de negócio possa analisar e decidir o tratamento adequado.
                                     </p>"><div class="content">Script de Saúde da Base</div></div>
                                 <div class="connector"></div>
@@ -199,8 +208,8 @@
                             </div>
                             <div class="flex flex-col items-center">
                                 <br>
-                                <div class="flow-node node-diamond clickable" data-title="Scripts de 'Retrato Inicial'" 
-                                data-business-context="<p>Deverão ser criados scripts responsáveis por gerar um “retrato” das informações da base antes das alterações previstas nos scripts. Este retrato poderá ser utilizado para comparar as informação com o retrato pós alterações. </p>" 
+                                <div class="flow-node node-diamond clickable" data-title="Scripts de 'Retrato" 
+                                data-business-context="<p>Deverão ser criados scripts responsáveis por gerar um “retrato” das informações da base antes e depois das alterações dos scripts. </p>" 
                                 ><div class="content">Scripts de "Retrato"</div></div>
                                 <div class="connector"></div>
                                 <div class="w-full p-4 border border-dashed border-gray-300 rounded-lg mt-4">
@@ -226,7 +235,7 @@
                                             - Indexador = “PU_EXTERNO“<br>
                                             - Clearing = “CTP21“<br>
                                             - Dt. Vcto > “data_referência_open“<br>
-                                            - Classificação Interna do Titulo = “CRI“, ”CRA”, ”Debêntures”
+                                            - Classificação Interna do Titulo = “CRI“, ”CRA”, ”DEB”
                                         </p>" 
                                         data-reference-link="https://matera.atlassian.net/wiki/spaces/RTCS/pages/359007071/DV+-+F584623+-+Open+-Ajuste+base+CRI+CRA+e+Deb+ntures#8.2.1.-Retrato-caracter%C3%ADsticas-do-papel"
                                         data-details="<p>
@@ -264,21 +273,10 @@
                                                 Amortização A partir de.</p>" 
                                             data-reference-link="https://matera.atlassian.net/wiki/spaces/RTCS/pages/359007071/DV+-+F584623+-+Open+-Ajuste+base+CRI+CRA+e+Deb+ntures#8.2.2.-Retrato-Par%C3%A2metros-Juros-e-Amortiza%C3%A7%C3%A3o"
                                             data-details="<p>
-                                                op_papel.cod_papel_sis_custodia<br><br>
-                                                select id_forma_pagamento
-                                                from   vop_cmb_forma_pagamento
-                                                into   :dlgPAPELDet.nIdFormaPagamento
-                                                where  descricao = :dlgPAPELDet.cmbFormaPagamento and
-                                                       cod_tit = :dlgPAPELDet.psCodTit;<br><br>
-                                                select descricao
-                                                from   op_calculo_juros
-                                                into :dlgPAPELDet.cmbCalculoJuros
-                                                where  id_calculo_juros = :dlgPAPELDet.nIdCalculoJuros;<br><br>
-                                                select descricao
-                                                from   vop_cmb_periodicidade_correcao
-                                                into :dlgPAPELDet.cmbPeriodicidadeCorrecao
-                                                where  id_periodicidade_correcao = :dlgPAPELDet.sIdPeriodicidadeCorrecao  and
-                                                       id_tipo_indexador = :psIdTipoIndexador;<br><br>
+                                                op_papel.cod_papel_sis_custodia<br>
+                                                op_forma_pagamento.descricao <i>(associar com op_tit através da op_rel_tit_forma_pagamento)</i><br>
+                                                op_oper_juros_amortizacao.id_calculo_juros<br>
+                                                op_periodicidade_correcao.descricao <i>(associar com id_periodicidade_correcao op_papel.id_periodicidade_correcao)</i><br>
                                                 op_papel.id_tipo_correcao;<br>
                                                 op_papel.id_pro_rata_correcao;<br>
                                                 op_papel.id_periodicidade_juros;<br>
@@ -378,7 +376,9 @@
                                                 Curva Operação (indicador);<br>
                                                 Vlr (Lastro);<br>
                                                 PU Atual (Lastro);<br>
-                                                PU Inicial da Operação.<br><br>
+                                                PU Inicial da Operação;<br>
+                                                Valor inicial;<br>
+                                                Data aplicação.<br><br>
                                                 <b>Filtros a aplicar:</b><br>
                                                 Tipo de Operação = VENDA DEFINITIVA ou TRANSFERENCIA DE CUSTODIA (Papel -> Operação -> Tipo de Operação -> Operação Interna)<br>
                                                 Situação do boleto = “ABERTA“.
@@ -403,7 +403,9 @@
                                                 op_oper.ind_curva_operacao<br>
                                                 op_lastro.vlr<br>
                                                 op_lastro.pu<br>
-                                                op_lastro.pu_dc<br><br>
+                                                op_lastro.pu_dc<br>
+                                                op_oper.VLR_INI <br>
+                                                op_oper.DT_APLICACAO<br><br>
                                                 <p>Será exportado no próprio script de consulta os resultados, pode ser utilizado tabelas auxiliares de staging no banco de dados. <br><br>
                                                     Quando é colocado no script os comandos:<br>
                                                     show user<br>
@@ -430,7 +432,7 @@
                             data-business-context="<p>Os dados corretos e atualizados, fornecidos pela equipe de negócio, são carregados no sistema. Esta passa a ser a 'fonte da verdade' para a migração.
                                 <br><br>Buscar na base Matera, todos papéis em que o indexador é “PU_EXTERNO“, custódia “CTP21“ e vencimento maior que a data de referência do sistema. Utilizar o campo Código do Ativo igual ao campo codigo_sna das Planilhas da Luz, para realizar as alterações conforme mapeamentos De -> Para.
                             </p>" 
-                            data-details="<p>Leitura do arquivo CSV disponibilizado pelo C6, que contém as informações que serão atualizadas para tabelas de staging no banco de dados para serem consumidas pelos scripts subsequentes.<br><br>
+                            data-details="<p>Leitura de dados disponibilizados pelo C6 através da planilha 'LUZ', buscar o que foi armazenado das informações em tabelas auxiliares, cujo utilizaremos nesta etapa como fonte para as alterações subsequentes.<br><br>
                             Criação de novo processo de importação de arquivo, tomar como base a alteração do layout '707'. Deverá ser criado um novo procedimento que realiza a leitura do layout disponibilizado.<br><br>
                             => Planilha de exemplo com dados dos ativos:<br>
                             https://docs.google.com/spreadsheets/d/1TWhko2k6TRxWV5u1P2ZMenhKi1PFSxPy/edit?gid=1075738696#gid=1075738696<br><br>
@@ -451,7 +453,7 @@
                             </p>" 
                             data-details="<p>Um script busca os boletos a serem portabilizados (todos os boletos associados aos papeis ADITADOS) e realizar a transferencia de custódia.
                                         <br><br><b>O script deve:</b><br><br>
-                                        - Vincular os boletos a um evento de 'Transferência de Custódia'. Para isso via tela é chamado a procedure sOpInsereEventoTRT informando os dados de custódia atual e novo. Pode ser usado o mesmo princípio.<br><br>
+                                        - Vincular os boletos a um evento de 'Transferência de Custódia'. Para isso via tela é chamado a procedure sOpInsereEventoTransferencia informando os dados de custódia atual e novo. Pode ser usado o mesmo princípio.<br><br>
                                         - Aprovar automaticamente o evento, independente da configuração do sistema. Realizar a chamada da função de aprovação de evento da pOpAprovacao.Evento informando o evento criado no passo anterior.<br><br>
                                         - Destinatário da transferência será 'C6 Consignado', que deverá estar devidamente cadastrado para realizar a operação.</p>
                             </p>"><div class="content">Portabilidade de Saída/Transferência de Custódia</div></div>
@@ -459,6 +461,8 @@
                         <div class="flow-node clickable" data-title="Aditamento de Papéis" 
                             data-business-context="<p>Esta é a etapa central, onde as regras de negócio dos ativos financeiros são efetivamente alteradas para as novas condições.</p>" 
                             data-details="<p>Execução do script principal que lê os dados da planilha 'Luz', busca os papéis correspondentes e aplica as atualizações usando a funcionalidade de Aditamento.
+                                <br><br><b>Nome: pOpApiAditamentoPapel</b><br><br>
+                                <b>Objetivo: </b> Esta package contém procedures para cadastro de aditamento de ativos do tipo CCB, CRA, CRI, DEB, CCIM.
                                 <br><br><b>Nome: pOpApiAditamentoPapel.insereEvento</b><br><br>
                                 <b>Objetivo: </b><br>
                                 Esta rotina é utilizada para incluir novos valores dos atributos aditáveis do ativo ou seja os novos valores do ativo que serão atualizados após efetivar o aditamento. <br><br>
@@ -484,7 +488,8 @@
                                 Poderá posteriormente gerar um arquivo de log detalhado, registrando o 'antes' e o 'depois' de cada campo alterado para cada ativo. Ou simplesmente garantir esse controle em tabelas consultáveis para administração dos dados.</p>">Gerar Logs Detalhados</div>
                         <div class="connector"></div>
                         <div class="flow-node clickable" data-title="Portabilidade de Entrada" 
-                            data-business-context="<p>Com os papéis já atualizados, criamos os novos boletos que refletem as condições corretas que foram vendidas ao cliente.</p>" 
+                            data-business-context="<p>A portabilidade de entrada ou RECEBIMENTO DE CUSTÓDIA dos boletos novos será feito pelo cliente, usando a planilha de operações, arquivo 707. Essa tarefa está prevista no item '8.6.3. Portabilidade de Entrada dos Boletos' do DV</p>" 
+                            data-reference-link="https://matera.atlassian.net/wiki/spaces/RTCS/pages/359007071/DV+-+F584623+-+Open+-Ajuste+base+CRI+CRA+e+Deb+ntures#8.6.3.-Portabilidade-de-Entrada-dos-Boletos"
                             data-details="<p>Esta etapa é a chamada do procedimento realizado na fase 1: Adequar Layout de Importação '707'.<br><br>
                             <b>Ação realizada pelo próprio C6.</b></p>"><div class="content">Portabilidade de Entrada</div></div>
                         <div class="connector"></div>
