--- a/index.html
+++ b/index.html
@@ -476,7 +476,10 @@
                                 - cria a alteração de aditamento<br>
                                 - aprovação de evento na movimentação do dia<br>
                                 - altera a situação de aditamento - aberta<br>
-                                - deve ser refletido no cadastro do papel.
+                                - deve ser refletido no cadastro do papel.<br><br>
+                                Observação: <br>
+                                - Caso não exista indexadores configurados/cadastrados nos títulos associados ao papel, deverá ser criado o vínculo dos indexadores informados aos títulos de DEB/CRI/CRA.<br><br>
+                                <b>sOpInsereRelTitIdx</b> - Vincula os indexadores aos títulos do papel.<br>
                             </p>"><div class="content">Aditamento de Papéis</div></div>
                     </div>
 
